# gameserver-rs

./: .dockerignore  .envrc  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build.sh  command.sh  credentials.json  database.json  deployment-dev.yaml  deployment.yaml  flake.nix  initilize.sh  install.sh  pnpm-lock.yaml  pnpm-workspace.yaml  setup_db.sh  shell.nix  sql-setup.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  post-create.sh  setup.sh
.devcontainer/docker-in-docker-patched/: devcontainer-feature.json  install.sh
.github/workflows/: ci.yml  ci_patch_deployment.py
apps/node/: db.json  deployment.yaml
apps/node/src/: databasespec.rs  extra.rs  filesystem.rs  jsondatabase.rs  main.rs
apps/server/: Cargo.toml
apps/server/src/: databasespec.rs  docker.rs  filesystem.rs  jsondatabase.rs  pgdatabase.rs
apps/server/src/frontend/: vite.config.ts
apps/server/src/frontend/extra-assets/: filebrowser.css  intergrations.css  manual.css  nodes.html  servers.css  statistics.html
apps/server/src/frontend/src/routes/: +page.svelte
gameserver/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  db.json  deployment-dev.yaml  provider-db.json
gameserver/server/: server.properties
gameserver/server/libraries/world/poi/: r.0.-2.mca
gameserver/server/libraries/world/region/: r.-1.-1.mca  r.0.-1.mca
gameserver/server/versions/world/region/: r.-1.-2.mca  r.0.-2.mca
gameserver/server/world/: level.dat_old
gameserver/server/world/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
gameserver/server/world/poi/: r.0.-2.mca
gameserver/server/world/region/: r.-1.-1.mca  r.-1.-2.mca  r.-1.0.mca  r.0.-1.mca  r.0.-2.mca  r.0.0.mca
gameserver/src/: database.rs  databasespec.rs  filesystem.rs  intergrations.rs  jsondatabase.rs  main.rs  providers.rs  providers.rs.old
migrations/: 20250608101055_add_authcode.sql  20250621042436_user_perms.sql
scripts/: example-env.sh  k3d-config.yaml  kustomization.yaml  postgres-dev.yaml  sync.sh  test.bat
src/: Dockerfile  database.rs  databasespec.rs  docker.rs  docker.rs.old  extra.rs  filesystem.rs  intergrations.rs.old  jsondatabase.rs  kubernetes.rs  main.rs  pgdatabase.rs
src/frontend/: index.html  instructions.txt  package-lock.json  package.json  shell.nix.old  svelte.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/frontend/extra-assets/: filebrowser.css  filebrowser.html  filebrowser.js  intergrations.js  main.css  main.html  main.js  manual.html  nodes.js  servers.html  servers.js  statistics.css  statistics.html  statistics.js  users.css  users.html
src/frontend/extra-assets/src/routes/: +page.svelte
src/frontend/src/: App.svelte  app.css  router.ts
src/frontend/src/components/: ThemeToggle.svelte
src/frontend/src/components/dashboard/: ChartWrapper.svelte  ConsolePanel.svelte  FileDropzone.svelte  SideNav.svelte  StatisticsBar.svelte  Status.svelte  TopBar.svelte  TopmostBar.svelte
src/frontend/src/lib/: serverConsoleStore.svelte.ts
src/frontend/src/lib/auth/: auth.svelte.ts
src/frontend/src/lib/middlewares/: authGuard.ts  guestGuard.ts  silentAuthGuard.ts
src/frontend/src/lib/stores/: fileBrowserStore.svelte.ts  integrationsStore.svelte.ts  nodesStore.svelte.ts  serverConsoleStore.svelte.ts  serversStore.svelte.ts  settingsStore.svelte.ts  statisticsStore.svelte.ts  usersStore.svelte.ts
src/frontend/src/lib/theme/: ThemeProvider.svelte  theme.svelte.ts
src/frontend/src/lib/utils/: http.ts
src/frontend/src/pages/: Login.svelte
src/frontend/src/pages/dashboard/: CreateServer.svelte  DashboardRoot.svelte  Home.svelte  Manual.svelte  Nodes.svelte  Servers.svelte  Users.svelte  Workflows.svelte
src/frontend/src/routes/: +page.svelte
src/frontend/src/routes/svelte-main/: +page.svelte
src/gameserver/: Cargo.toml  Dockerfile  deployment-dev.yaml  deployment.yaml
src/gameserver/server/: server.properties
src/gameserver/server/world/: level.dat_old
src/gameserver/server/world/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
src/gameserver/server/world/poi/: r.0.-1.mca  r.0.0.mca
src/gameserver/server/world/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
src/gameserver/src/: extra.rs  filesystem.rs  intergrations.rs  main.rs  providers.rs
src/html/: index.html  main.css  main.html  main.js
src/svelte/: credentials.json  package-lock.json  package.json  path-adaptor.js  svelte.config.js  vite.config.ts
src/svelte/.svelte-kit/: ambient.d.ts
src/svelte/.svelte-kit/adapter-node/: index.js  manifest-full.js  manifest.js
src/svelte/extra-assets/: filebrowser.css  filebrowser.html  filebrowser.js  intergrations.html  main.css  main.html  main.js  nodes.css  nodes.js  servers.css  servers.html  settings.html  users.css  users.html  users.js
src/svelte/src/routes/: +page.svelte
src/svelte/src/users/: +page.svelte
src/svelte/static/: index.html  index.html.old  main.css  main.html  main.js  users.js
src/vanilla/html/: index.html  main.html  users.html
uploads/: .bash_history
(+26 files in other folders)
