[package]
name = "gameserver-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["v1_28"] }
kube = "0.99.0"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tar = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
bollard = { version = "0.19.0-rc1" }
http-body-util = "0.1.3"
