[package]
name = "gameserver-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["v1_28"] }
kube = "0.99.0"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tar = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
bollard = { version = "0.19.0-rc1" }
http-body-util = "0.1.3"
anyhow = "1.0.97"
axum = { version = "0.8", features = ["macros", "ws"] }
httpc-test = { version = "0.1.10", features = ["colored", "colored_json"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["add-extension", "cors", "fs"] }
walkdir = "2.5.0"
http-body = "1.0.1"
mime_guess = "2.0.5"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
chrono = "0.4.41"
axum-login = "0.17.0"
async-trait = "0.1.88"
