
[package]
name = "gameserver-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = { version = "2.5.0", optional = true }
k8s-openapi = { version = "0.24.0", features = ["v1_28"], optional = true }
bollard = { version = "0.19.0-rc1", optional = true }
kube = { version = "0.99.0", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
tar = { version = "0.4", optional = true }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
http-body-util = "0.1.3"
anyhow = "1.0.97"
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
httpc-test = { version = "0.1.10", features = ["colored", "colored_json"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["add-extension", "cors", "fs"] }
http-body = "1.0.1"
mime_guess = "2.0.5"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
chrono = "0.4.41"
axum-login = "0.17.0"
async-trait = "0.1.88"
sqlx = { version = "0.8.6", optional = true, features = ["postgres", "runtime-tokio", "runtime-tokio-native-tls"] }
urlencoding = "2.1.3"
serial_test = "3.2.0"
log = "0.4.27"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
serde_urlencoded = "0.7.1"
file-transfer-system = "0.3.1"

[features]
default = []
database = []
full-stack = [
    "kube",
    "k8s-openapi",
    "bollard",
    "tar",
    "walkdir",
    "serde_yaml",
    "sqlx"
]
