[package]
name = "gameserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.41"
use = "0.0.1-pre.0"
hostname = "0.4.1"

[[bin]]
name = "myapp"
path = "src/main.rs"

[target.x86_64-unknown-linux-musl]
linker = "musl-gcc"

[features]
full-stack = []
