[package]
name = "gameserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.41"
use = "0.0.1-pre.0"
hostname = "0.4.1"
file-transfer-system = "0.3.1"
uuid = { version = "1.18.0", features = ["v4"] }
multer = "3.1.0"
async-trait = "0.1.89"
walkdir = "2.5.0"
anyhow = "1.0.99"
futures = "0.3.31"
env = "1.0.1"

[[bin]]
name = "gameserver-rs-node"
path = "src/main.rs"

[target.x86_64-unknown-linux-musl]
linker = "musl-gcc"

[features]
full-stack = []
